--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>2.3</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Begin OpenMRS core -->
 
         <dependency>
